<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment"
    android:background="@color/bg_gray" >


    <!-- Main Content -->
    <LinearLayout
        android:id="@+id/infoSection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toTopOf="@+id/paymentSection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_left_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_order"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/sora_semibold"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- toggle button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@drawable/bg_toggle_container"
            android:orientation="horizontal"
            android:padding="4dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:baselineAligned="false">

            <TextView
                android:id="@+id/deliverOption"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/deliver"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:fontFamily="@font/sora_regular"
                android:background="@drawable/bg_toggle_selected"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/pickupOption"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pick_up"
                android:textColor="#000000"
                android:textSize="16sp"
                android:fontFamily="@font/sora_regular" />
        </LinearLayout>

        <!-- delivery address -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sora_semibold"
                android:text="@string/delivery_address"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/sora_bold"
                android:text="@string/jl_kpg_sutoyo"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/sora_regular"
                android:text="@string/kpg_sutoyo_no_620_bilzen_tanjungbalai"
                android:textColor="#999999"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_outline"
                    android:drawableStart="@drawable/ic_edit"
                    android:fontFamily="@font/sora_medium"
                    android:paddingHorizontal="10dp"
                    android:text="Edit Address"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    tools:ignore="HardcodedText,TextSizeCheck,TouchTargetSizeCheck" />


                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_outline"
                    android:drawableStart="@drawable/ic_note"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/sora_medium"
                    android:paddingHorizontal="10dp"
                    android:text="Add Note"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    tools:ignore="HardcodedText,TextSizeCheck,TouchTargetSizeCheck" />
            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ascasd"
            android:paddingVertical="15dp" >

            <!-- Coffee image -->
            <ImageView
                android:id="@+id/itemImage"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_coffe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="ContentDescription" />

            <!-- Title and description -->
            <LinearLayout
                android:id="@+id/itemInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toEndOf="@id/itemImage"
                app:layout_constraintTop_toTopOf="@id/itemImage"
                app:layout_constraintBottom_toBottomOf="@id/itemImage"
                app:layout_constraintEnd_toStartOf="@id/quantitySelector">

                <TextView
                    android:id="@+id/itemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Caffe Mocha"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:fontFamily="@font/sora_semibold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/itemDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sora_regular"
                    android:text="@string/deep_foam"
                    android:textColor="#888888"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <!-- Quantity selector -->
            <LinearLayout
                android:id="@+id/quantitySelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageButton
                    android:id="@+id/decreaseQty"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/bg_qty_button"
                    android:contentDescription="@string/decrease"
                    android:src="@drawable/ic_minus"
                    tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

                <TextView
                    android:id="@+id/itemQty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:layout_marginHorizontal="12dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/sora_medium"
                    tools:ignore="HardcodedText" />

                <ImageButton
                    android:id="@+id/increaseQty"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/bg_qty_button"
                    android:contentDescription="@string/increase"
                    android:src="@drawable/ic_add"
                    tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_discount"
            android:gravity="center_vertical"
            android:layout_marginVertical="5dp"
            android:paddingVertical="15dp"
            android:paddingLeft="18dp"
            >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_discount"
                android:layout_marginEnd="8dp"
                android:contentDescription="discount_icon"/>

            <TextView
                android:layout_width="262dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sora_semibold"
                android:text="1 Discount is Applied"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="39dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:contentDescription="discount_icon"
                android:src="@drawable/ic_right_arrow" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/sora_semibold"
                android:text="@string/payment_summary"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sora_regular"
                    android:text="@string/price"
                    android:textColor="#999999"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sora_medium"
                    android:gravity="end"
                    android:text="@string/_4_53"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sora_regular"
                    android:text="@string/delivery_fee"
                    android:textColor="#999999"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sora_medium"
                    android:gravity="end"
                    android:text="@string/_1_0"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


    <!-- Bottom Container -->
    <LinearLayout
        android:id="@+id/paymentSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_top_white"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Wallet Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_wallet"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/walleticon"
                android:src="@drawable/ic_wallet"
                android:layout_marginEnd="7dp"/>

            <LinearLayout
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/cash_wallet"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="@font/sora_medium"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/sora_medium"
                    android:text="@string/_5_53"
                    android:textColor="@color/brown"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:contentDescription="@string/arrowdown"
                android:src="@drawable/ic_arrow_down"

                />
        </LinearLayout>

        <!-- Order Button -->
        <Button
            android:id="@+id/orderButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@color/brown"
            android:fontFamily="@font/sora_bold"
            android:text="@string/order"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
